@@ -113,8 +113,6 @@
 // Template specialization is supported.
 # define ACE_HAS_TEMPLATE_SPECIALIZATION
 
-// Looks like Win32 has a non-const swab function
-#define ACE_HAS_NONCONST_SWAB
 
 // At least for ACE_UNIMPLEMENTED_FUNC in class templates, this is needed to
 // explicitly instantiate a template that has ACE_UNIMPLEMENTED_FUNC.
